feat(identity): add current user profile endpoints